--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -2,20 +2,25 @@ name: e2e
 on: [push, pull_request]
 
 jobs:
-  e2e-test:
+  itests-go-stable:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        go: [ '1.18' ]
     timeout-minutes: 15
     steps:
-      - uses: actions/setup-go@v3
+      - name: Set up Golang
+        uses: actions/setup-go@v3
         with:
           go-version: '1.18'
-      - uses: actions/checkout@v3
-      - uses: technote-space/get-diff-action@v6
-        with:
-          PATTERNS: |
-            **/**.go
-            go.mod
-            go.sum
-      - name: test
-        working-directory: ./
+          with:
+            go-version: ${{ matrix.go }}
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Test
         run: make spacenet-test
