--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,10 @@
 name: golangci-lint
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - spacenet
+  pull_request:
+
 jobs:
   golangci:
     name: lint
@@ -22,10 +27,10 @@ jobs:
           version: latest
 
           # Optional: working directory, useful for monorepos
-          working-directory: ./chain
+          # working-directory:
 
           # Optional: golangci-lint command line arguments.
-          args: --timeout 5m
+          args: --timeout 5m ./chain
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
