--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         go: [ '1.18' ]
-    timeout-minutes: 30
+    timeout-minutes: 10
     steps:
       - name: Set up Golang
         uses: actions/setup-go@v3
@@ -39,20 +39,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: RestoreFilecoinProofData
-        id: cache-filecoin-data-restore
-        uses: actions/cache/restore@v3
-        with:
-          path: /var/tmp/filecoin-proof-parameters/
-          key: ${{ runner.os }}-filecoinparams
-
-      - name: Test
-          run: make spacenet-test
-
-      - name: SaveFilecoinProofData
-        id: cache-filecoin-data-save
-        uses: actions/cache/save@v3
-        with:
-          path: /var/tmp/filecoin-proof-parameters/
-          key: ${{ steps.cache-filecoin-data-restore.outputs.cache-primary-key }}
-
+      - name: Build
+        run: make spacenet
