--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
           # working-directory:
 
           # Optional: golangci-lint command line arguments.
-          args: --timeout 5m ./chain
+          args: --timeout 5m -v ./chain
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
