--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,21 @@ skip-dirs:
   - vendor$
   - testdata$
   - examples$
+  - extern$
+
+run:
+  skip-files:
+    - chain/stmgr/forks_test.go
+    - chain/sync_test.go
+    - chain/market/*
+    - chain/rand/*
+    - chain/store/*
+    - markets/*
+    - conformance/*
+    - node/*
+    - cmd/lotus-worker/*
+    - cmd/lotus-sim/*
+    - paychmgr/*
 
 issues:
   exclude:
@@ -36,7 +51,12 @@ issues:
     - "xerrors.* is deprecated"
 
   exclude-use-default: false
+
   exclude-rules:
+
+    - path: chain/stmgr/forks_test.go
+      linters:
+        - golint, typecheck, all
 
     - path: node/modules/lp2p
       linters:
