--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - name: Set up Golang
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
