--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,7 +50,6 @@ issues:
     - "Potential hardcoded credentials"
     - "Use of weak random number generator"
     - "xerrors.* is deprecated"
-    - "\"github.com/libp2p/go-libp2p-core/host\" is deprecated"
 
   exclude-use-default: false
 
@@ -88,6 +87,9 @@ issues:
       text: "context.Context should be the first parameter"
       linters:
         - golint
+    - linters:
+      - staticcheck
+      text: "\"github.com/libp2p/go-libp2p-core/crypto" is deprecated:"
 
 linters-settings:
   goconst:
