--- a/.golangci.yml
+++ b/.golangci.yml
@@ -89,7 +89,7 @@ issues:
         - golint
     - linters:
       - staticcheck
-      text: "\"github.com/libp2p/go-libp2p-core/crypto" is deprecated:"
+      text: "\"github.com/libp2p/go-libp2p-core/crypto\" is deprecated:"
 
 linters-settings:
   goconst:
