--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ jobs:
         default: golang
       go-test-flags:
         type: string
-        default: "-tags=spacenet -timeout 20m"
+        default: "-tags=spacenet -shuffle=on -v -count=1"
         description: Flags passed to go test.
       target:
         type: string
@@ -237,9 +237,6 @@ jobs:
     <<: *basic_test
 
   test-mir:
-    <<: *basic_test
-
-  test-mir-advanced:
     <<: *basic_test
 
   test-mir-with-mangler:
@@ -572,21 +569,21 @@ workflows:
       - test-mir-smoke:
           name: mir-smoke-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestMirConsensusSmoke"
+          go-test-flags: "-tags=spacenet -timeout 10m -run TestMirSmoke"
           target: "./itests/mir_test.go"
           requires:
             - consensus-unit-tests
-      - test-mir-advanced:
-          name: mir-advanced-tests
+      - test-mir:
+          name: mir-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirConsensusAdvanced"
+          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirBasic"
           target: "./itests/mir_test.go"
           requires:
             - mir-smoke-tests
       - test-mir-reconfiguration:
           name: mir-reconfiguration-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirConsensusWithReconfiguration"
+          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirReconfiguration"
           target: "./itests/mir_test.go"
           requires:
             - mir-smoke-tests
@@ -622,10 +619,15 @@ workflows:
       - test-mir-with-mangler:
           name: mir-mangler-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 120m -run TestMirConsensusWithMangler"
+          go-test-flags: "-tags=spacenet -timeout 120m -run TestMirWithMangler"
           target: "./itests/mir_test.go"
       - test-mir:
           name: mir-consensus-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirConsensus"
+          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirBasic"
+          target: "./itests/mir_test.go"
+      - test-mir-reconfiguration:
+          name: mir-reconfiguration-tests
+          suite: consensus
+          go-test-flags: "-tags=spacenet -timeout 60m -run TestMirReconfiguration"
           target: "./itests/mir_test.go"
