--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -565,15 +565,6 @@ workflows:
   version: 2.1
   ci:
     jobs:
-      - lint-all:
-          concurrency: "16"   # expend all docker 2xlarge CPUs.
-      - mod-tidy-check
-      - gofmt
-      - gen-check
-      - test-chain-unit:
-          name: chain-unit-tests
-          suite: consensus
-          target: "./chain/consensus/..."
       - test-mir-smoke:
           name: mir-smoke-tests
           suite: consensus
@@ -582,32 +573,9 @@ workflows:
       - test-mir-basic:
           name: mir-basic-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic"
+          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic_WithFOmissionNodes"
           target: "./itests/mir_test.go"
-      - test-mir-reconfiguration:
-          name: mir-reconfiguration-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration"
-          target: "./itests/mir_test.go"
-      - build-spacenet
-      - build-all:
-          filters:
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
-      - build-macos:
-          filters:
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
-      - build-appimage:
-          filters:
-            branches:
-              ignore:
-                - /.*/
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
+
   nightly:
     triggers:
       - schedule:
