--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -565,15 +565,10 @@ workflows:
   version: 2.1
   ci:
     jobs:
-      - test-mir-smoke:
-          name: mir-smoke-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestMirSmoke"
-          target: "./itests/mir_test.go"
       - test-mir-basic:
           name: mir-basic-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic_WithFOmissionNodes"
+          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic"
           target: "./itests/mir_test.go"
 
   nightly:
