--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -565,6 +565,11 @@ workflows:
   version: 2.1
   ci:
     jobs:
+      - test-mir-reconfiguration:
+          name: mir-reconfiguration-tests
+          suite: consensus
+          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration"
+          target: "./itests/mir_test.go"
       - test-mir-basic:
           name: mir-basic-tests
           suite: consensus
